# testing

./: CHANGELOG.md  Cargo.toml  README.md  cliff.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yaml  feature-request.yaml
.github/workflows/: assign.yaml  auto-assign-on-comment.yaml  ci.yaml  pr.yaml  release.yaml
dev/: RELEASE.md
dev/changelog/: v0.1.1.md  v0.1.2.md
dev/conf/: cliff.toml
src/: io.rs  lib.rs  prelude.rs  rand.rs  slice_ext.rs
