[package]
name = "regd-testing"
authors = ["Shingo OKAWA <shingo.okawa.g.h.c@gmail.com>"]
categories = ["development-tools"]
description = "regd testing is a collection of utilities designed to simplify testing in regd projects."
documentation = "https://docs.rs/regd-testing"
edition = "2024"
homepage = "https://github.com/regd-io/testing"
keywords = ["rand", "random", "regd", "testing", "utility"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/regd-io/testing"
rust-version = "1.85"
version = "0.1.0"

[dependencies]
rand = "0.9.1"
tempfile = "3.19.1"
